[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
scraper = "0.22"
governor = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tokio-util = "0.7"
thiserror = "2"
flate2 = "1"
nonzero_ext = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
axum-test = "16"
