[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "gzip"] }
scraper = "0.25"
governor = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aws-sdk-s3 = "1"
aws-config = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tokio-util = "0.7"
thiserror = "2"
flate2 = "1"
nonzero_ext = "0.3"
uuid = { version = "1", features = ["v4"] }
regex = "1"
redis = { version = "1.0.3", features = ["tokio-comp"] }

[dev-dependencies]
axum-test = "18"
